17-Azure-Kubernetes-Service/start/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v0.3
    spec:
      containers:
      - name: frontend
        image: austinemser/frontend:0.3
        ports:
        - containerPort: 3000
